Change title of application

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="center">
-  <h1>This demo is about Custom Directives with in Angular</h1>
+  <h1>Custom Directives in Angular</h1>
 </div>
 <div class="tooltip-example">
   <div tooltip tooltext="Tooltip on Left" placement="left" delay="500">
